<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iscriviti_ad_un_corso"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/iscriviti_al_corso_testo"
        android:layout_marginTop="40dp" />

    <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:gravity="center"
            android:text="@string/per_maggiorni_informazioni"

            android:textSize="11sp"
            android:textColor="@color/colorPrimary"
            android:linksClickable="true"

            />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="11"
        android:inputType="textPersonName"
        android:hint="@string/inserisci_qui_il_codice"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button2"
        android:text="@string/iscriviti"
        android:layout_gravity="center"
        style="@style/pulsante_schermo_intero"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"

        />
    </LinearLayout>
</ScrollView>

